Se realiza ajuste en de dimensiones en monto de saldos y movimientos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,8 @@
     <string name="movements_details_concept">Concepto</string>
     <string name="movements_details_folio">Folio</string>
     <string name="movements_details_status">Estatus de transferencia</string>
+    <string name="super_pesos_sign">$</string>
+    <string name="super_index_cents">00</string>
 
 
     <!-- Recieve strings-->
