--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,7 +206,7 @@
     <string name="shipment_ok">¡Envío realizado!</string>
     <string name="receive_details_successful_button">IR AL INICIO</string>
     <string name="receivi_details_tooltip">Es el número de control \n de envio de dinero.</string>
-
+    <string name="warn_message_banxico">Este vínculo se activará a más tardar dentro\nde los primeros 5 minutos siguientes de la\naceptación de la operación.</string>
     <!--help fragment-->
     <string name="help_appbar_title">Ayuda</string>
     <string name="help_headline_one_label">¿Necesitas ayuda?</string>
