Se separa layout para compartir detalles de movimientos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,7 @@
     <string name="movements_details_reciever_account">MTCN</string>
     <string name="movements_details_concept">Concepto</string>
     <string name="movements_details_folio">Folio</string>
-    <string name="movements_details_status">Estatus de transferencia</string>
+    <string name="movements_details_status">Cuenta Destino</string>
     <string name="super_pesos_sign">$</string>
     <string name="super_index_cents">00</string>
     <string name="no_movements_avaible">Movimientos no\ndisponibles</string>
