Se agrega boton compartie en detalles de movimiento

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,6 +175,7 @@
     <string name="no_movements_avaible">Movimientos no\ndisponibles</string>
     <string name="try_later">Intenta más tarde</string>
     <string name="accept_movements">ACEPTAR</string>
+    <string name="share_details_button">COMPARTIR</string>
 
 
     <!-- Recieve strings-->
