Se realiza ajuste en registro 1: correos electronicos igules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="option_selection_hint">Selecciona una opción*</string>
     <string name="continue_button">CONTINUAR</string>
     <string name="invalid_data">*Dato no válido</string>
+    <string name="email_not_matches">*Correos no coinciden</string>
 
     <!-- Fragment login face strings-->
     <string name="login_welcome">¡Bienvenido!</string>
