rempalzo de assets faltantes en las alertas del mtcn y cambio en el wordin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,11 +334,11 @@
     <string name="mtcn_num_incorrect_body_label">Verifícalo nuevamente con tu remitente.</string>
     <string name="mtc_num_incorrect_button_label">ACEPTAR</string>
     <!--incorrect data in mtc alert dialog-->
-    <string name="mtcn_data_incorrect_title_label">Datos Incorrectos.</string>
-    <string name="mtcn_data_incorrect_body_label">Es necesario validar los datos de Sucursal y Nivel de cliente.</string>
+    <string name="mtcn_data_incorrect_title_label">Datos Faltantes.</string>
+    <string name="mtcn_data_incorrect_body_label">Es necesario que acudas con un ejecutivo a proporcionar la información completa.</string>
     <string name="mtcN_data_incorrect_button_label">ACEPTAR</string>
     <!--incorrect mtcn type alert dialog-->
-    <string name="mtcn_type_incorrect_title_label">Tipo de Envío Incorrecto.</string>
-    <string name="mtcn_type_incorrect_body_label">Validación de Envío Familiar.</string>
+    <string name="mtcn_type_incorrect_title_label">Operación No realizada.</string>
+    <string name="mtcn_type_incorrect_body_label">Comunícate al Centro de contacto para recibir ayuda.</string>
     <string name="mtcn_type_incorrect_button_label">ACEPTAR</string>
 </resources>
