Se ajustan estados en spinner de registro 2, se ajustan alcaldias en spinner de registro 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -269,6 +269,7 @@
     </string-array>
 
     <string-array name="alcaldias">
+        <item>@string/option_selection_hint</item>
         <item>Álvaro Obregón</item>
         <item>Azcapotzalco</item>
         <item>Benito Juárez</item>
