Se realiza ajuste de botón para compartir y se agrega leyenda de ayuda en la parte inferior de itemDetails

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,6 +178,7 @@
     <string name="try_later">Intenta más tarde</string>
     <string name="accept_movements">ACEPTAR</string>
     <string name="share_details_button">COMPARTIR</string>
+    <string name="bottom_help_label">Para solicitar una aclaración, comunícate al Centro de\ncontacto para recibir ayuda: 5554478868 opción 1.</string>
 
 
     <!-- Recieve strings-->
