--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,6 +215,7 @@
     <string name="recieve_details_successful_label">Tu envío de dinero ya se \n encuentra en tu cuenta \n Elektra Wallet</string>
     <string name="recieve_details_screen_title">Recibir envío de dinero</string>
     <string name="shipment_ok">Esta operación es gratis</string>
+    <string name="receive_details_share_image_title_shipment_label">¡Envío recibido!</string>
     <string name="receive_details_successful_button">IR AL INICIO</string>
     <string name="receivi_details_tooltip">Es el número de control \n de envio de dinero.</string>
     <string name="warn_message_banxico">Este vínculo se activará a más tardar dentro\nde los primeros 5 minutos siguientes de la\naceptación de la operación.</string>
